GGB-888 fix for CP scrollbars
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@47380 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -3648,12 +3648,13 @@ body.application[dir=rtl] .signInDialog .headerPanel .gwt-Button {
 
 .cpPanel .cpScrollPanel{
 	flex-grow: 1;
-	overflow-x: hidden !important;
+	/*overflow-x: hidden !important;*/
 	overflow-y: auto !important;
 }
 
 .outerScrollPanel{
-	overflow-y: hidden !important;
+	/*overflow-y: hidden !important;*/
+	overflow: hidden !important;
 }
 
 .outerScrollPanel > div{
@@ -3667,6 +3668,8 @@ body.application[dir=rtl] .signInDialog .headerPanel .gwt-Button {
 
 .cpHeaderHolderPanel{
 	background-color: #F8F8F8;
+	overflow: hidden !important;
+	border-bottom: 1px solid #DDDDDD;
 }
 
 /*
